[tool.poetry]
name = "es-api"
version = "0.1.0"
description = "HTTP REST API between frontend and elastic"
authors = ["Дмитрий Д. Карманов <karmanovdd@yamoney.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = {extras = ["standart"], version = "^0.13.3"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
